<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".CurrentWeather">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >
    <ImageView
        android:id="@+id/weatherIcon"
        android:layout_width="@dimen/height"
        android:layout_height="@dimen/height"/>
    <TextView
        android:id="@+id/temperature"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_margin"
        android:layout_marginTop="@dimen/text_margin"
        android:textStyle="bold"
        android:textSize="48sp" />
    <TextView
        android:id="@+id/description"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_margin"
        android:layout_marginTop="@dimen/text_margin"
        android:textSize="@dimen/font_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/text_margin"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:textSize="@dimen/font_size"
            android:layout_marginBottom="@dimen/text_margin"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:textColor="@color/white"
                android:layout_marginBottom="16dp"
                android:textSize="@dimen/font_size" />
            <TextView
                android:id="@+id/tempValue"
                android:layout_width="fill_parent"
                android:gravity="end"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feelsLike"
                android:textColor="@color/white"
                android:layout_marginBottom="@dimen/text_margin"
                android:textSize="@dimen/font_size" />
            <TextView
                android:id="@+id/feelsLike"
                android:layout_width="fill_parent"
                android:gravity="end"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_margin"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textColor="@color/white"
                android:layout_marginBottom="@dimen/text_margin"
                android:textSize="@dimen/font_size" />
            <TextView
                android:id="@+id/humidityVal"
                android:layout_width="fill_parent"
                android:gravity="end"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pressure"
                android:textColor="@color/white"
                android:layout_marginBottom="@dimen/text_margin"
                android:textSize="@dimen/font_size" />
            <TextView
                android:id="@+id/pressureVal"
                android:layout_width="fill_parent"
                android:gravity="end"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_margin"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>



</LinearLayout>

</ScrollView>
